...
                                                <color key="backgroundColor" red="0.87650697970000002" green="0.44271151949999998" blue="0.19034071659999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="zy3-PX-6TJ"/>
                                                </constraints>
                                                <state key="normal" title="Login"/>
                                                <connections>
                                                    <action selector="btnLogin:" destination="qFG-c5-kd5" eventType="touchUpInside" id="avm-q7-EbD"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8cR-iI-4aR" userLabel="Register">
                                                <rect key="frame" x="104.5" y="317.5" width="166" height="30"/>
                                                <state key="normal" title="Not a member? Register"/>
                                                <connections>
...
                            <constraint firstItem="ZAa-5e-AEp" firstAttribute="top" secondItem="yq9-ET-JJD" secondAttribute="top" id="fkN-aB-wwm"/>
                            <constraint firstItem="yq9-ET-JJD" firstAttribute="leading" secondItem="1yM-Dn-Nky" secondAttribute="leading" id="juo-vG-w7W"/>
                            <constraint firstItem="ZAa-5e-AEp" firstAttribute="leading" secondItem="yq9-ET-JJD" secondAttribute="leading" id="zAp-MD-4FF"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="txtEmail" destination="5Fh-7g-Z3A" id="zlA-Vx-pBO"/>
                        <outlet property="txtPassword" destination="NJD-TF-2xK" id="QpI-yN-sva"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Die-YI-9aH" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="4" y="-36"/>
        </scene>
...
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="IcY-wa-QS2">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="41"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="x00-uO-F8b"/>
                                </constraints>
                                <segments>
                                    <segment title="Preview"/>
                                    <segment title="Category"/>
                                    <segment title="Menu"/>
                                </segments>
                                <connections>
                                    <action selector="changeSegment:" destination="IMf-GS-pum" eventType="valueChanged" id="R6y-9j-Ofr"/>
                                </connections>
...
